--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
                 <StackLayout class="hr"></StackLayout>
 
                 <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/sos')">
-                    <Label col="0" text="&#xf3c5;" class="nt-icon fas"></Label>
+                    <Label col="0" text="&#xf479;" class="nt-icon fas"></Label>
                     <Label col="1" text="Contacter les secours" class="p-r-10"></Label>
                 </GridLayout>
 
