--- a/src/app/informations/pistes/pistes.component.html
+++ b/src/app/informations/pistes/pistes.component.html
@@ -3,8 +3,8 @@
         <Label color="black" class="page__content-placeholder" text="Ouverture des pistes" row="0" column="0" colspan="4"
         fontWeight="Bold" textAlign="center"></Label>
         <StackLayout class="hr" row="1" colspan="2"></StackLayout>
-    
-        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="Domaine ouvert 70%" textWrap="true" textAlign="center" row="2" column="0" rowspan="4"
+        <!-- <Image row="2" column="0" rowspan="4" src="~/images/domaine skiable 2.png"></Image> -->
+        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70% du domaine ouvert" textWrap="true" textAlign="center" row="2" column="0" rowspan="4"
         fontWeight="Bold" width="47%" height="30%" id="domaine"></Label>
         <Label backgroundColor="#087A06"color="white" class="page__content-placeholder" text="3/6" row="2" column="1" 
         fontWeight="Bold" paddingLeft="40%" paddingRight="40%" marginRight="4%"></Label>
