--- a/src/app/sos/activite/activite.component.html
+++ b/src/app/sos/activite/activite.component.html
@@ -3,13 +3,13 @@
         <FlexboxLayout backgroundColor="#3E3F32" flexDirection="row" flexWrap="wrap" justifyContent="space-around"
             marginTop="50%">
 
-        <Label backgroundColor="#3E3F32" class="pagecontent-placeholder" text="Le bléssé pratique" row="0"
+        <Label backgroundColor="#3E3F32" class="pagecontent-placeholder" text="Le blessé pratique" row="0"
             color="white" fontSize=25px; fontWeight="Bold" marginbottom="100%" marginLeft="10%"
             marginRight="10%"></Label>
         <Label class="position" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="55%" class="bouttonchute" class="pictureA1"
-            text="Skieur" color="white" fontWeight="Bold" width="400px" height="400px"
+            text="Ski" color="white" fontWeight="Bold" width="400px" height="400px"
             backgroundColor="#FF0000"></Label>
-        <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="30%" text="Snowboardeur"
+        <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="30%" text="Snowboard"
             class="pictureB1" width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000"></Label>
         <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="55%" text="Luge" class="pictureC1"
             width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000"></Label>
