--- a/src/app/informations/remontees/remontees.component.html
+++ b/src/app/informations/remontees/remontees.component.html
@@ -1,64 +1,68 @@
 <ScrollView>
-<GridLayout backgroundColor="white" columns="*,*,*,*" rows="40,1,30,30">
-    <Label color="black" class="page__content-placeholder" text="Ouverture des remontées" row="0" column="0" colspan="4" 
+<StackLayout height= 1000vh>
+    <GridLayout backgroundColor="white" columns="*" rows="40,1" marginBottom="2vh">
+        <Label color="black" class="page__content-placeholder" text="Ouverture des remontées" row="0" column="0" colspan="4" 
+        fontWeight="Bold" textAlign="center"></Label>
+        <StackLayout class="hr" row="1" colspan="4"></StackLayout>
+    </GridLayout>
+<GridLayout backgroundColor="white" columns="*,*,*,*" rows="60,60" class="encadre" borderRadius="10%" marginTop="1%" marginLeft="5%"
+marginRight="5%">
+    <!-- <Label color="black" class="page__content-placeholder" text="Ouverture des remontées" row="0" column="0" colspan="4" 
     fontWeight="Bold" textAlign="center"></Label>
-    <StackLayout class="hr" row="1" colspan="4"></StackLayout>
+    <StackLayout class="hr" row="1" colspan="4"></StackLayout> -->
     <!-- <Image row="2" column="1"  src=""></Image>
     <Image row="2" column="2"  src=""></Image>
     <Image row="2" column="3"  src=""></Image>
     <Image row="2" column="4"  src=""></Image> -->
-    <Label color="black" class="page__content-placeholder" text="Tapis" row="2" column="0" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Teleski" row="2" column="1" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Telesiège" row="2" column="2" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Télécabine" row="2" column="3" fontWeight="Bold" fontSize="15"></Label>
+    <Label color="black" class="page__content-placeholder" text="Tapis" row="0" column="0" fontWeight="Bold" fontSize="15"></Label>
+    <Label color="black" class="page__content-placeholder" text="Teleski" row="0" column="1" fontWeight="Bold" fontSize="15"></Label>
+    <Label color="black" class="page__content-placeholder" text="Telesiège" row="0" column="2" fontWeight="Bold" fontSize="15"></Label>
+    <Label color="black" class="page__content-placeholder" text="Télécabine" row="0" column="3" fontWeight="Bold" fontSize="15"></Label>
 
-    <Label color="black" class="page__content-placeholder" text="2/2" row="4" column="0" fontWeight="Bold"></Label>
-    <Label color="black" class="page__content-placeholder" text="7/7" row="4" column="1" fontWeight="Bold"></Label> 
-    <Label color="black" class="page__content-placeholder" text="14/15" row="4" column="2" fontWeight="Bold"></Label> 
-    <Label color="black" class="page__content-placeholder" text="2/3" row="4" column="3" fontWeight="Bold"></Label>   
+    <Label color="black" class="page__content-placeholder" text="2/2" row="1" column="0" fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="7/7" row="1" column="1" fontWeight="Bold"></Label> 
+    <Label color="black" class="page__content-placeholder" text="14/15" row="1" column="2" fontWeight="Bold"></Label> 
+    <Label color="black" class="page__content-placeholder" text="2/3" row="1" column="3" fontWeight="Bold"></Label>   
 </GridLayout>
-<!-- <GridLayout backgroundColor="white" rows="30,30,30,30,40,40,40" >
-    <StackLayout class="hr"row="0" ></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="CHOIX DE SECTEUR" backgroundColor="#000000" color="#FFFF00" row="1" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="2"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="DEBUTANT" backgroundColor="#000000" color="#FFFF00" row="3" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="4"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="CONFIRME" backgroundColor="#000000" color="#FFFFFF" row="5" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="6"></StackLayout>
-</GridLayout> -->
-<!-- <GridLayout backgroundColor="white" rows="30,30,30,30,40,40,40,40,40,40,40" >
-    <StackLayout class="hr"row="0" ></StackLayout>
-    <ContentView color="black" class="page__content-placeholder" text="TYPE DE REMONTEES" backgroundColor="#000000" color="#FFFF00" row="1" fontWeight="Bold"></ContentView>
-    <StackLayout class="hr"row="2"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="TAPIS" row="3" backgroundColor="#000000" color="#FFFF00" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="4"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="TELESKI(TK)" row="5" backgroundColor="#000000" color="#FFFF00" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="6"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="TELESIEGE (TSD)" row="7" backgroundColor="#000000" color="#FFFFFF" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="8"></StackLayout>
-    <Label color="black" class="page__content-placeholder" text="TELESIEGE (TSF)" row="9" backgroundColor="#000000" color="#FFFF00" fontWeight="Bold"></Label>
-    <StackLayout class="hr"row="10"></StackLayout>
-</GridLayout> -->
-<GridLayout class="espacement" backgroundColor="#C4C4C4" rows="50,50,50,50,50,50" columns="*,*,*">
+<GridLayout backgroundColor="#C4C4C4" rows="50,50,50,50,50,50,50,50,50,50,50,50" columns="*,*,*" marginTop="2vh">
     <Label color="black" class="page__content-placeholder" text="BEARNAIS" row="0" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="0" column="1" fontWeight="Bold" paddingLeft="60px" paddingRight="60px"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="0" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:00" row="0" column="2" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" text="Maintenon  |" color="#008000" row="1" column="0" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" text="Bearnais  |" color="#0000FF" row="1" column="1" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" text="Grenouilles" color="#0000FF" row="1" column="2"  fontWeight="Bold"></Label>
     <Label color="black" class="page__content-placeholder" text="SAPIN" row="2" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="2" column="1" fontWeight="Bold" paddingLeft="60px" paddingRight="60px"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="2" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:00" row="2" column="2" fontWeight="Bold"></Label>
     <Label color="black" class="page__content-placeholder" text="BRACA" row="3" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="3" column="1" fontWeight="Bold" paddingLeft="60px" paddingRight="60px"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="3" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:00" row="3" column="2" fontWeight="Bold"></Label>
     <Label color="black" class="page__content-placeholder" text="PIQUETTE" row="4" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="4" column="1" fontWeight="Bold" paddingLeft="60px" paddingRight="60px"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="4" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:15" row="4" column="2" fontWeight="Bold"></Label>
     <Label color="black" class="page__content-placeholder" text="TURON" row="5" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" id="status_closed" text="Fermé" row="5" column="1" fontWeight="Bold" paddingLeft="60px" paddingRight="60px"></Label>
+    <Label class="page__content-placeholder" id="status_closed" text="Fermé" row="5" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:00" row="5" column="2" fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="BEARNAIS" row="6" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="6" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
+    <Label color="black" class="page__content-placeholder" text="9:00" row="6" column="2" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Maintenon  |" color="#008000" row="7" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Bearnais  |" color="#0000FF" row="7" column="1" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Grenouilles" color="#0000FF" row="7" column="2"  fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="SAPIN" row="8" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="8" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
+    <Label color="black" class="page__content-placeholder" text="9:00" row="8" column="2" fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="BRACA" row="9" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="9" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
+    <Label color="black" class="page__content-placeholder" text="9:00" row="9" column="2" fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="PIQUETTE" row="10" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="10" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
+    <Label color="black" class="page__content-placeholder" text="9:15" row="10" column="2" fontWeight="Bold"></Label>
+    <Label color="black" class="page__content-placeholder" text="TURON" row="11" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" id="status_closed" text="Fermé" row="11" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
+    <Label color="black" class="page__content-placeholder" text="9:00" row="11" column="2" fontWeight="Bold"></Label>
 </GridLayout>
+</StackLayout>
 </ScrollView>
 <StackLayout>
     <BottomNavigation>
