--- a/src/app/utilisateur/creationcompte/creationcompte.component.html
+++ b/src/app/utilisateur/creationcompte/creationcompte.component.html
@@ -9,18 +9,18 @@
         <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
     </GridLayout>
     <GridLayout rows="850">
-        <ContentView row="0" id="cache_noir" width="100%" height="65%" backgroundColor="#000000"></ContentView>
-        <ContentView row="1" id="message_accueil" width="90%" height="35%" backgroundColor="#433B3B" ></ContentView>
-        <Label row="2" class="entete2" text="Bienvenue !"></Label>
+        <ContentView row="0" id="cache_noir" width="100%" height="67%" backgroundColor="#000000"></ContentView>
+        <ContentView row="1" id="message_accueil" width="90%" height="38%" backgroundColor="#433B3B" ></ContentView>
+        <Label row="2" class="entete2" text="BIENVENUE !"></Label>
         <Label row="3" class="entete3" text="Créez votre compte et profitez en toute liberté des fonctionnalités de votre application Skiview" textWrap="true"></Label>
         <Button row="4" [nsRouterLink]="['/utilisateur/inscription']" text="CREER UN COMPTE" class="btn_creer_un_compte"></Button>
-        <Label [nsRouterLink]="['/utilisateur/connexion']" row="5" class="entete2" text="Dejà membre ?" textWrap="true"></Label> 
+        <Label [nsRouterLink]="['/utilisateur/connexion']" row="5" class="entete4" text="Dejà membre ?" textWrap="true"></Label> 
     </GridLayout>
 </GridLayout>
 </StackLayout>
-<StackLayout class="hr" height="71%"></StackLayout>
+<StackLayout class="hr" height="68%"></StackLayout>
 <StackLayout>
-    <BottomNavigation height="100%">
+    <BottomNavigation>
         <TabStrip>
             <TabStripItem>
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
