--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -8,28 +8,28 @@
             <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
         </GridLayout>
         <GridLayout rows="850">
-            <ContentView row="0" id="cache_noir" width="100%" height="65%" backgroundColor="#000000"></ContentView>
+            <ContentView row="0" id="cache_noir" width="100%" height="67%" backgroundColor="#000000"></ContentView>
             <ContentView row="1" id="message_accueil" width="70%" height="40%" backgroundColor="#433B3B"></ContentView>
             <!-- <Label row="2" class="entete2" text="Bienvenue à"></Label> -->
         </GridLayout>
         <GridLayout>
-            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="55%" height="55%" class="logo_station"></image>
+            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="55%" height="50%" class="logo_station"></image>
         </GridLayout>
     </GridLayout>
 </StackLayout>
-<StackLayout class="hr" height="73%"></StackLayout>
+<StackLayout class="hr" height="68%"></StackLayout>
 <StackLayout>
-    <BottomNavigation height="100%">
+    <BottomNavigation>
         <TabStrip>
             <TabStripItem>
                 <!-- <image src="~/images/infos.png"></image> -->
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label col="1" text="&#xf041;" class="nt-icon fas"></Label>
+                <Label col="1" text="&#xf071;" class="nt-icon fas"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label col="2" text="&#xf3c5;" class="nt-icon fas"></Label>
+                <Label col="2" text="&#xf479;" class="nt-icon fas"></Label>
             </TabStripItem>
         </TabStrip>
     </BottomNavigation>
