--- a/src/app/carnet/carnetrempli/carnetrempli.component.html
+++ b/src/app/carnet/carnetrempli/carnetrempli.component.html
@@ -45,11 +45,18 @@
             <GridLayout>
                 <Button [nsRouterLink]="['/carnet/cgu']" row="0" text="RENSEIGNER MON CARNET" class="btn btn-warning" id="button_health_book"></Button> 
             </GridLayout>
+            <StackLayout class="hr" marginBottom="11px"></StackLayout>
+            <GridLayout rows="*" columns="*,*,*">
+                <Label [nsRouterLink]="['/informations']" col="0" row="0" text="&#xf05a;" class="nt-icon fas" id="basDePage"></Label>
+                <Label [nsRouterLink]="['/danger']" col="1" row="0" text="&#xf071;" class="nt-icon fas" id="basDePage"></Label>
+                <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
+            </GridLayout>
+
         </StackLayout>
     </GridLayout>
  </ScrollView>            
             
-            <BottomNavigation class="bottomNav" height="100%">
+            <!-- <BottomNavigation class="bottomNav" height="100%">
                 <StackLayout class="hr" height="50%"></StackLayout>
                 <TabStrip>
                     <TabStripItem>
@@ -62,6 +69,10 @@
                         <Label col="2" text="&#xf3c5;" class="nt-icon fas"></Label>
                     </TabStripItem>
                 </TabStrip>
-            </BottomNavigation>
+            </BottomNavigation> -->
  
-
+            <!-- <GridLayout rows="*" columns="*,*,*">
+                <Label [nsRouterLink]="['/informations']" col="0" row="0" text="&#xf05a;" class="nt-icon fas" id="basDePage"></Label>
+                <Label [nsRouterLink]="['/danger']" col="1" row="0" text="&#xf071;" class="nt-icon fas" id="basDePage"></Label>
+                <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
+            </GridLayout> -->
