--- a/src/app/carnet/cgu/cgu.component.html
+++ b/src/app/carnet/cgu/cgu.component.html
@@ -18,19 +18,6 @@
 
 </ScrollView>
 <GridLayout>
-    <Button [nsRouterLink]="['/carnet/formulaire']" text="Accepter ces conditions" backgroundColor="#0DF24D" color="white" (tap)="submit()" fontSize="Large"
+    <Button [nsRouterLink]="['/carnet/formulaire']" text="Accepter les conditions" backgroundColor="#0DF24D" color="white" fontSize="Large"
         class="soumission" marginTop="66%" marginBottom="10%"></Button>
 </GridLayout>
-<BottomNavigation height="1900px">
-    <TabStrip>
-        <TabStripItem>
-            <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
-        </TabStripItem>
-        <TabStripItem>
-            <Label col="1" text="&#xf041;" class="nt-icon fas"></Label>
-        </TabStripItem>
-        <TabStripItem>
-            <Label col="2" text="&#xf041;" class="nt-icon fas"></Label>
-        </TabStripItem>
-    </TabStrip>
-</BottomNavigation>
