--- a/src/app/danger/fiche-signalement/fiche-signalement.component.html
+++ b/src/app/danger/fiche-signalement/fiche-signalement.component.html
@@ -39,7 +39,7 @@
         </StackLayout>
     </ScrollView>
 </GridLayout>
-<StackLayout>
+<!-- <StackLayout>
     <BottomNavigation height="100%">
         <TabStrip>
             <TabStripItem>
@@ -47,4 +47,7 @@
             </TabStripItem>
         </TabStrip>
     </BottomNavigation>
-</StackLayout>
+</StackLayout> -->
+<GridLayout rows="*" columns="*">
+    <Label [nsRouterLink]="['/utilisateur/station']" col="0" row="0" text="&#xf015;" class="nt-icon fas" id="basDePage"></Label>
+</GridLayout>
