--- a/src/app/danger/recapitulatif/recapitulatif.component.html
+++ b/src/app/danger/recapitulatif/recapitulatif.component.html
@@ -29,3 +29,10 @@
     <Image row="9" class="galerie_end" src="https://www.telegraph.co.uk/content/dam/Travel/ski/Crans-Montana-avalanche-skiers-KEYSTONE-ANTHONY%20ANEX.jpg?imwidth=450"  width="800px" stretch="aspectFit"></Image>
 </GridLayout>
 </ScrollView> 
+<FlexboxLayout flexDirection="row" justifyContent="space-around" alignItems="flex-end" class="slider">
+                  
+    <Label [nsRouterLink]="['/danger/photo2']" text="< PRECEDENT >" id="slider" color="#000000"  marginBottom="20"></Label>
+
+    <!-- <Label [nsRouterLink]="['/danger/confirmationEnvoi']" text="SUIVANT >" id="slider" color="#000000"  marginBottom="20"></Label>        -->
+
+</FlexboxLayout>
