--- a/src/app/informations/meteo/meteo.component.html
+++ b/src/app/informations/meteo/meteo.component.html
@@ -16,3 +16,8 @@
     <Label color="black" class="page__content-placeholder" text="5°C" row="5" column="1"
         fontWeight="Bold"></Label>
 </GridLayout>
+<GridLayout backgroundColor="black" rows="200" height="15%" marginTop="90%" marginBottom="5" columns="*,*,*">
+    <Label col="0" text="&#xf05a;" [nsRouterLink]="['/informations']" marginLeft="10%" class="nt-icon fas"></Label>
+    <Label col="1" text="&#xf071;" [nsRouterLink]="['/danger']" marginLeft="10%" class="nt-icon fas"></Label>
+    <Label col="2" text="&#xf479;" [nsRouterLink]="['/sos']" marginLeft="10%" class="nt-icon fas"></Label>
+</GridLayout>
