--- a/src/app/utilisateur/creationcompte/creationcompte.component.html
+++ b/src/app/utilisateur/creationcompte/creationcompte.component.html
@@ -1,5 +1,5 @@
 
-<StackLayout>
+<StackLayout class="ecran">
 <GridLayout class="page__content">
 
     <!-- <GridLayout rows="350">
@@ -18,8 +18,8 @@
     </GridLayout>
 </GridLayout>
 </StackLayout>
-<StackLayout class="hr" height="68%"></StackLayout>
-<StackLayout>
+<!-- <StackLayout class="hr" height="71%"></StackLayout> -->
+<!-- <StackLayout>
     <BottomNavigation>
         <TabStrip>
             <TabStripItem>
@@ -33,7 +33,17 @@
             </TabStripItem>
         </TabStrip>
     </BottomNavigation>
-</StackLayout>
+</StackLayout> -->
+<!-- <GridLayout rows="*" columns="*,*,*">
+    <Label [nsRouterLink]="['/informations']" col="0" row="0" text="&#xf05a;" class="nt-icon fas" id="basDePage"></Label>
+    <Label [nsRouterLink]="['/danger']" col="1" row="0" text="&#xf071;" class="nt-icon fas" id="basDePage"></Label>
+    <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
+</GridLayout> -->
+<!-- <FlexboxLayout backgroundColor="black" rows="*" height="19%" columns="*,*,*" flexDirection="row" flexWrap="wrap" justifyContent="space-around" alignItems="flex-end">
+    <Button col="0" text="&#xf05a;"" class="nt-icon fas"></Button>
+    <Button col="1" text="&#xf071;" class="nt-icon fas"></Button>
+    <Button col="2" text="&#xf479;" class="nt-icon fas"></Button>
+</FlexboxLayout> -->
 
 
 
