--- a/src/app/informations/pistes/pistes.component.html
+++ b/src/app/informations/pistes/pistes.component.html
@@ -4,8 +4,8 @@
         fontWeight="Bold" textAlign="center"></Label>
         <StackLayout class="hr" row="1" colspan="2"></StackLayout>
         <!-- <Image row="2" column="0" rowspan="4" src="~/images/domaine skiable 2.png"></Image> -->
-        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70% du domaine ouvert" textWrap="true" textAlign="center" row="2" column="0" rowspan="4"
-        fontWeight="Bold" width="47%" height="30%" id="domaine"></Label>
+        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70%" textWrap="true" textAlign="center" row="2" column="0" rowspan="4"
+        fontSize="80px"fontWeight="Bold" width="47%" height="30%" id="domaine"></Label>
         <Label backgroundColor="#087A06"color="white" class="page__content-placeholder" text="3/6" row="2" column="1" 
         fontWeight="Bold" paddingLeft="40%" paddingRight="40%" marginRight="4%"></Label>
         <Label backgroundColor="#5A57E0"color="white" class="page__content-placeholder" text="5/8" row="3" column="1" 
@@ -20,3 +20,8 @@
     </WebView>
     </GridLayout>
 </StackLayout>
+<GridLayout backgroundColor="black" rows="200" height="10%" marginTop="92%" marginBottom="5" columns="*,*,*">
+    <Label col="0" text="&#xf05a;" [nsRouterLink]="['/informations']" marginLeft="10%" class="nt-icon fas"></Label>
+    <Label col="1" text="&#xf071;" [nsRouterLink]="['/danger']" marginLeft="10%" class="nt-icon fas"></Label>
+    <Label col="2" text="&#xf479;" [nsRouterLink]="['/sos']" marginLeft="10%" class="nt-icon fas"></Label>
+</GridLayout>
