--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -9,20 +9,19 @@
         </GridLayout>
         <GridLayout rows="850">
             <ContentView row="0" id="cache_noir" width="100%" height="67%" backgroundColor="#000000"></ContentView>
-            <ContentView row="1" id="message_accueil" width="70%" height="40%" backgroundColor="#433B3B"></ContentView>
+            <!-- <ContentView row="1" id="message_accueil" width="70%" height="40%" backgroundColor="#433B3B"></ContentView> -->
             <!-- <Label row="2" class="entete2" text="Bienvenue à"></Label> -->
         </GridLayout>
         <GridLayout>
-            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="55%" height="50%" class="logo_station"></image>
+            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="60%" height="60%" class="logo_station"></image>
         </GridLayout>
-    </GridLayout>
-</StackLayout>
-<StackLayout class="hr" height="68%"></StackLayout>
-<StackLayout>
+    
+
+<!-- <StackLayout>
     <BottomNavigation>
         <TabStrip>
             <TabStripItem>
-                <!-- <image src="~/images/infos.png"></image> -->
+                <image src="~/images/infos.png"></image>
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
             </TabStripItem>
             <TabStripItem>
@@ -33,4 +32,12 @@
             </TabStripItem>
         </TabStrip>
     </BottomNavigation>
+</StackLayout> -->
+<StackLayout class="hr" marginTop="81%"></StackLayout>
+<GridLayout rows="*" columns="*,*,*">
+    <Label [nsRouterLink]="['/informations']" col="0" row="0" text="&#xf05a;" class="nt-icon fas" id="basDePage"></Label>
+    <Label [nsRouterLink]="['/danger']" col="1" row="0" text="&#xf071;" class="nt-icon fas" id="basDePage"></Label>
+    <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
+</GridLayout>
+</GridLayout>
 </StackLayout>
